# iaea-guidance-parser

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: nss17t.yaml  nuclear_safety_series.yaml  nuclear_security_series.yaml
src/iaea_guidance_parser/: __init__.py  cli.py  exporters.py  metadata.py  models.py  parser.py  pdf_extract.py  qa.py  rules.py  security_audit.py  series.py
tests/: conftest.py  test_patterns.py  test_safety_parser_regressions.py  test_security_audit.py
tools/: audit_security_knowledge.py
